--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -71,7 +71,7 @@
         <li><strong>Оплата:</strong> Перевод на карту, СБП или другие способы оплаты.</li>
         <li><strong>Конфиденциальность:</strong> Все разговоры остаются между нами. Я не записываю сессии без вашего
           разрешения.</li>
-        <li><strong>* Условия работы:</strong> Прозрачные условия работы и поддержка на каждом этапе. Все детали обсуждаются на вводной встрече.</li>
+        <li><strong>Условия работы:</strong> Прозрачные условия работы и поддержка на каждом этапе. Все детали обсуждаются на вводной встрече.</li>
       </ul>
     </div>
 
