--- a/layouts/partials/process.html
+++ b/layouts/partials/process.html
@@ -45,7 +45,7 @@
         <div class="step__content">
           <h3 class="step__title">Закрепление результата</h3>
           <p class="step__description">
-            Когда цели достигнуты, мы переходим к завершению работы: подводим итоги, создаем план поддержания достигнутых изменений, договариваемся о поддерживающих встречах (если нужно). Вы уходите с набором инструментов на всю жизнь.
+            Когда цели достигнуты, мы переходим к завершению работы: подводим итоги, создаем план поддержания достигнутых изменений, договариваемся о поддерживающих встречах (если нужно). Вы получите набор инструментов для самостоятельной поддержки изменений.
           </p>
         </div>
       </div>
