--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -15,7 +15,7 @@
       <div class="about__info">
         <div class="about__bio">
           <p>Меня зовут Ксения, я психолог. Специализируюсь на когнитивно-поведенческом подходе (КПТ) — структурном
-            методе работы с тревожными состояниями и эпизодами сильной тревоги. Мой стиль работы — бережный и
+            методе работы с сильной тревогой и беспокойством. Мой стиль работы — бережный и
             последовательный. Помогаю клиентам пересмотреть привычные реакции и вернуть качество жизни.</p>
         </div>
 
