--- a/layouts/_default/landing-b.html
+++ b/layouts/_default/landing-b.html
@@ -174,6 +174,10 @@
       webvisor: true, clickmap: true, accurateTrackBounce: true, trackLinks: true
     });
   </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/{{ .Site.Params.yandexMetrikaID }}"
+        style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
   {{ end }}
 
   {{ if .Site.Params.googleAnalyticsID }}
