--- a/layouts/_default/landing-b.html
+++ b/layouts/_default/landing-b.html
@@ -150,10 +150,9 @@
   <section class="hero" data-block="hero">
     <div class="hero__container">
       <div class="hero__content">
-        <h1 class="hero__title">Представьте: вы просыпаетесь с ощущением ясности и легкости.</h1>
+        <h1 class="hero__title">Тревога не отпускает. Есть выход.</h1>
 
-        <p class="hero__subtitle">Это возможно при последовательной работе с психологом. В подходе КПТ мы не просто
-          говорим, а внедряем конкретные навыки, которые помогают справляться с тревогой в реальной жизни.</p>
+        <p class="hero__subtitle">Онлайн-психолог, метод КПТ. Конкретные навыки вместо бесконечных разговоров.</p>
 
         <div class="hero__badges">
           <span class="badge">Конфиденциально</span>
