--- a/layouts/_default/landing-b.html
+++ b/layouts/_default/landing-b.html
@@ -449,6 +449,10 @@
     <div class="container">
       <h2 class="section__title">Стоимость</h2>
 
+      <div class="pricing__promo">
+        <span class="pricing__promo-text">Специальная цена на индивидуальные консультации</span>
+      </div>
+
       <div class="pricing__cards">
         <div class="pricing-card">
           <div class="pricing-card__header">
@@ -456,8 +460,14 @@
           </div>
 
           <div class="pricing-card__price">
-            <span class="price__amount">5000</span>
-            <span class="price__currency">&nbsp;₽</span>
+            <div class="price__old">
+              <span class="price__old-amount">10 000</span>
+              <span class="price__old-currency">&nbsp;₽</span>
+            </div>
+            <div class="price__current">
+              <span class="price__amount">5000</span>
+              <span class="price__currency">&nbsp;₽</span>
+            </div>
           </div>
 
           <ul class="pricing-card__features">
@@ -481,9 +491,15 @@
           </div>
 
           <div class="pricing-card__price">
-            <span class="price__amount">45000</span>
-            <span class="price__currency">&nbsp;₽</span>
-            <div class="price__save">Одна сессия в подарок</div>
+            <div class="price__old">
+              <span class="price__old-amount">100 000</span>
+              <span class="price__old-currency">&nbsp;₽</span>
+            </div>
+            <div class="price__current">
+              <span class="price__amount">45000</span>
+              <span class="price__currency">&nbsp;₽</span>
+            </div>
+            <div class="price__save">Экономия 55 000&nbsp;₽</div>
           </div>
 
           <ul class="pricing-card__features">
