--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -2,6 +2,10 @@
   <div class="container">
     <h2 class="section__title">Стоимость и форматы</h2>
 
+    <div class="pricing__promo">
+      <span class="pricing__promo-text">Специальная цена на индивидуальные консультации</span>
+    </div>
+
     <div class="pricing__cards">
       <div class="pricing-card">
         <div class="pricing-card__header">
@@ -9,8 +13,14 @@
         </div>
 
         <div class="pricing-card__price">
-          <span class="price__amount">5000</span>
-          <span class="price__currency">&nbsp;₽</span>
+          <div class="price__old">
+            <span class="price__old-amount">10 000</span>
+            <span class="price__old-currency">&nbsp;₽</span>
+          </div>
+          <div class="price__current">
+            <span class="price__amount">5000</span>
+            <span class="price__currency">&nbsp;₽</span>
+          </div>
         </div>
 
         <ul class="pricing-card__features">
@@ -38,9 +48,15 @@
         </div>
 
         <div class="pricing-card__price">
-          <span class="price__amount">45000</span>
-          <span class="price__currency">&nbsp;₽</span>
-          <div class="price__save">Экономия 5000&nbsp;₽ — одна сессия в подарок</div>
+          <div class="price__old">
+            <span class="price__old-amount">100 000</span>
+            <span class="price__old-currency">&nbsp;₽</span>
+          </div>
+          <div class="price__current">
+            <span class="price__amount">45000</span>
+            <span class="price__currency">&nbsp;₽</span>
+          </div>
+          <div class="price__save">Экономия 55 000&nbsp;₽</div>
         </div>
 
         <ul class="pricing-card__features">
