--- a/layouts/_default/landing-b.html
+++ b/layouts/_default/landing-b.html
@@ -95,12 +95,13 @@
   }
   </script>
 
-  <!-- CSS: Colors + Theme -->
+  <!-- CSS: Colors + Base + Theme -->
   {{ $themeName := .Params.theme | default "premium" }}
   {{ $colors := resources.Get "css/colors.css" }}
+  {{ $base := resources.Get "css/base.css" }}
   {{ $theme := resources.Get (printf "css/themes/%s.css" $themeName) }}
-  {{ if and $colors $theme }}
-  {{ $css := slice $colors $theme | resources.Concat "css/bundle-b.css" | minify | fingerprint }}
+  {{ if and $colors $base $theme }}
+  {{ $css := slice $colors $base $theme | resources.Concat "css/bundle-b.css" | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $css.Permalink }}" integrity="{{ $css.Data.Integrity }}">
   {{ end }}
 
