--- a/layouts/partials/floating-nav.html
+++ b/layouts/partials/floating-nav.html
@@ -57,7 +57,7 @@
        data-position="floating-nav"
        data-target="faq">
       <span class="floating-nav__item-title">Ответы на вопросы</span>
-      <span class="floating-nav__item-desc">Часто задаваемые вопросы о работе с тревогой и паническими атаками</span>
+      <span class="floating-nav__item-desc">Часто задаваемые вопросы о работе с тревогой и стрессом</span>
     </a>
   </div>
 
